--- a/Dauber/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Dauber/Views/Account/ExternalLoginConfirmation.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.ReferrerId)
+    @*@Html.HiddenFor(m => m.ReferrerId)*@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <p class="text-info">
