Correct broken MyAccount views

--- a/Dauber/Views/Home/About.cshtml
+++ b/Dauber/Views/Home/About.cshtml
@@ -16,7 +16,7 @@
         <img src="~/Images/MyTransformation.jpg" class="img-responsive img-thumbnail" alt="200lb weight loss" />
     </p>
     <p>
-        As I was growing my business, I was spending so much time checking client's MyFitnessPal diaries and Fitocracy feeds to see if they were adhereing to their plans! My options were ask the clients to manually enter this info, or enter it myself! Being a programer, I knew there had to be a better way. Hence the creation of Dauber. If you caught the reference to the show "Coach", then high five!
+        As I was growing my business, I was spending so much time checking MyFitnessPal diaries and Fitocracy feeds to see if clients were adhereing to their plans! My options were ask the clients to manually enter this info, or enter it myself! Being a programer, I knew there had to be a better way. Hence the creation of Dauber. If you caught the reference to the show "Coach", then high five!
     </p>
     @*<p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
