--- a/Dauber/Views/MyAccount/UpdateCard.cshtml
+++ b/Dauber/Views/MyAccount/UpdateCard.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dauber.Models.MyAccountUpdateCardViewModel
+﻿@*@model Dauber.Models.MyAccountUpdateCardViewModel
 
 @{
     ViewBag.Title = "Update Card";
