--- a/Dauber/Views/MyAccount/UpdatePlan.cshtml
+++ b/Dauber/Views/MyAccount/UpdatePlan.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dauber.Models.MyAccountUpdatePlanViewModel
+﻿@*@model Dauber.Models.MyAccountUpdatePlanViewModel
 
 @{
     ViewBag.Title = "Update Plan";
